syntax = "proto3";


package ru.spb.hse.roguelike;


message PingRequest {
    string ping = 1;
}

message PingResponse {
    string pong = 1;
}

message GetUserIdRequest {
}

message GetUserIdResponse {
    int64 userId = 1;
}

service RoguelikeService {
    rpc getUserId (GetUserIdRequest) returns (GetUserIdResponse);
    rpc ping (PingRequest) returns (PingResponse) {
    }
}